--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,30 @@
+<!-- app/views/layouts/application.html.erb -->
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Rails Dice Roll</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+<head>
+  <title>Rails Dice Roll</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <style>
-      .navbar {
-        display: flex;
-      	justify-content: space-around;
-      }
-    </style>
-    
-  </head>
+  <style>
+    .navbar {
+      display: flex;
+      justify-content: space-around;
+    }
+  </style>
 
-  <body>
-    <div class="navbar">
-      <div><a href="/">Home</a></div>
-      <div><a href="/dice/2/6">2d6</a></div>
-      <div><a href="/dice/2/10">2d10</a></div>
-      <div><a href="/dice/1/20">1d20</a></div>
-      <div><a href="/dice/5/4">5d4</a></div>
-    </div>
+</head>
 
-    <%= yield %>
+<body>
+  <div class="navbar">
+    <div><a href="/">Home</a></div>
+    <div><a href="/roll_dice/2/6">2d6</a></div>
+    <div><a href="/roll_dice/2/10">2d10</a></div>
+    <div><a href="/roll_dice/1/20">1d20</a></div>
+    <div><a href="/roll_dice/5/4">5d4</a></div>
+  </div>
 
-  </body>
+  <%= yield %>
+
+</body>
 </html>
