--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,11 @@
 <body>
   <div class="navbar">
     <div><a href="/">Home</a></div>
-    <div><a href="/roll_dice/2/6">2d6</a></div>
-    <div><a href="/roll_dice/2/10">2d10</a></div>
-    <div><a href="/roll_dice/1/20">1d20</a></div>
-    <div><a href="/roll_dice/5/4">5d4</a></div>
+    <div><a href="/dice/2/6">2d6</a></div>
+    <div><a href="/dice/2/10">2d10</a></div>
+    <div><a href="/dice/1/20">1d20</a></div>
+    <div><a href="/dice/5/4">5d4</a></div>
+    <div><a href="/dice/50/6">50d6</a></div>
   </div>
 
   <%= yield %>
