--- a/app/views/dice/dice_rolls_50.html.erb
+++ b/app/views/dice/dice_rolls_50.html.erb
@@ -1,11 +1,11 @@
-<!-- app/views/dice/roll.html.erb -->
+<!-- app/views/dice/dice_rolls_50.html.erb -->
 <!DOCTYPE html>
 <html>
 <head>
   <title>Dice Roll</title>
 </head>
 <body>
-  <h1>2d6</h1>
+  <h1>50d6</h1>
   <ul>
     <% @rolls.each do |roll| %>
       <li><%= roll %></li>
