--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
       justify-content: space-around;
     }
   </style>
-
+  
 </head>
 
 <body>
@@ -24,6 +24,8 @@
     <div><a href="/dice/5/4">5d4</a></div>
     <div><a href="/dice/50/6">50d6</a></div>
   </div>
+
+  <h1>Dice Roll</h1> <!-- Add this heading for the root URL -->
 
   <%= yield %>
 
